--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -254,19 +254,19 @@ While other longitudinal designs have their own unique strengths and application
 
 ### Types of longitudinal panel models
 
-With the large and continually expanding body of research on statistical methods for longitudinal analyses, determining which longitudinal model to implement can be challenging. The aim of this section is to help researchers navigate these many options in order to identify the statistical approach most appropriate to their unique research question. Notably, there are a myriad of viable ways one can go about grouping various types of longitudinal models for presentation. Common examples include grouping by linearity [linear vs nonlinear models; see @collins2006], the number of measurement occasions (see @king2018), and statistical equivalency (e.g., change scores vs. residualized change; see @castro-schilo2018). The ordering/organzation we use below overlaps in a number of ways with these examples, and in particular with Bauer and Curran (2019; @bauer2019). However, it is important to note that in each case, the ordering/organization that is chosen is somewhat arbitrary and primarly intended to allow the reader to compare and contrast various analytic approaches. In the following we describe (briefly) and summarize the advantages/disadvantages for a series of longitudinal models organized into the following `fuzzy` groupings: Traditional Models, Modern GLM Extensions, SEM, and Advanced SEM. We note that this is not an exhaustive review of each of these methods, but for more in-depth detail we do provide the reader relevant resources. As aptly summarized by Bauer and Curran (2019; @bauer2019), "there are many exceptions, alternatives, nuances, 'what ifs', and 'but couldn’t yous' that aren’t addressed here." 
+With the large and continually expanding body of research on statistical methods for longitudinal analyses, determining which longitudinal model to implement can be challenging. The aim of this section is to help researchers navigate these many options to identify the statistical approach most appropriate to their unique research question. Notably, there are a myriad of viable ways one can go about grouping various types of longitudinal models for presentation. Common examples include grouping by linearity [linear vs nonlinear models; see @collins2006], the number of measurement occasions (see @king2018), and statistical equivalency (e.g., change scores vs. residualized change; see @castro-schilo2018). The organization we use below overlaps in a number of ways with these examples, and in particular with Bauer and Curran (2019; @bauer2019). However, it is important to note that in each case, the ordering that is chosen is somewhat arbitrary and primarily intended to allow the reader to compare and contrast various analytic approaches. In the following we describe (briefly) and summarize the advantages/disadvantages of a series of longitudinal models organized into the following groupings: Traditional Models, Modern GLM Extensions, SEM, and Advanced SEM. We note that this is not an exhaustive review of each of these methods, but for more in-depth detail we do provide the reader relevant resources. As aptly summarized by Bauer and Curran (2019; @bauer2019), "there are many exceptions, alternatives, nuances, 'what ifs', and 'but couldn’t yous' that aren’t addressed here." 
 
 ![Longitudinal Models/Data Structures](./figures/Mindmap1copy.png){#fig-LONGmod fig-alt="Longitudinal Models Diagram." width="300" height="300" fig-align="left"}
 <br>
 
 #### Traditional Models
-Traditional methods for longitudinal analysis primarily focus on modeling mean-level change, and how these changes may differ across groups or levels of some other variable. For example, is there a difference in average math scores obtained across multiple assessments between boys and girls? Longitudinal models that focus on mean-level change are also referred to as `marginal models` and examples of specific methods include `repeated measures ANOVA` (and `MANOVA`), `ANCOVA`, and `Generalized Estimating Equations` (GEE). These methods are commonly used when data is only available from 2 measurement occassions. For example, computing a `difference score` (e.g., math scores at t2 - math scores at t1) that can be used as an outcome in a subsequent GLM analysis (e.g., paired-samples t-test, repeated measures ANOVA) to test for differences in patterns of change over time and between groups. Additionally the longitudinal `signed-rank test`, a nonparametric alternative to the paired t-test, can be a useful tool for analyzing non-normal paired data. Another common approach, often used in pre-/post-design studies, is to use `residualized change score analysis` to assess the degree of change in a variable, while controlling for its initial level. For example, regressing post-treatment scores on pre-treatment scores and then using the resulting residuals as a measure of change that is adjusted for baseline scores (ignoring any prior group assignments/differences). Similar to difference scores, the residualized change score is often included in subsequent analysis, such as for evaluating intervention effects in pre-test/post-test designs [@kisbu2013].
+Traditional methods for longitudinal analysis primarily focus on modeling mean-level change, and how these changes may differ across groups or levels of some other variable. For example, is there a difference in average math scores obtained across multiple assessments between boys and girls? Longitudinal models that focus on mean-level change are also referred to as `marginal models` and examples of specific methods include `repeated measures ANOVA` (and `MANOVA`), `ANCOVA`, and `Generalized Estimating Equations` (GEE). These methods are commonly used when data is only available from 2 measurement occasions. For example, computing a `difference score` (e.g., math scores at t2 - math scores at t1) that can be used as an outcome in a subsequent GLM analysis (e.g., paired-samples t-test, repeated measures ANOVA) to test for differences in patterns of change over time and between groups. Additionally, the longitudinal `signed-rank test`, a nonparametric alternative to the paired t-test, can be a useful tool for analyzing non-normal paired data. Another common approach, often used in pre-/post-design studies, is to use `residualized change score analysis` to assess the degree of change in a variable, while controlling for its initial level. For example, regressing post-treatment scores on pre-treatment scores and then using the resulting residuals as a measure of change that is adjusted for baseline scores (ignoring any prior group assignments/differences). Similar to difference scores, the residualized change score is often included in subsequent analysis, such as for evaluating intervention effects in pre-test/post-test designs [@kisbu2013].
 
 Traditional longitudinal methods can still be useful in some contexts (e.g., < 3 measurement occasions), but overall their practical utility for answering questions about developmental processes is limited. Perhaps most notably, these models do not allow for characterizing patterns of within-person change. This is a particularly important limitation since most psychological theories posit within-person processes (i.e., what will happen within a given individual). As such, traditional approaches often correspond poorly with most theoretical models of change and a failure to disaggregate between-person and within-person effects can result in consequential errors of inference (e.g., ecological fallacy)[@curran2011]. Moreover, even determining which of these procedures to use for comparing change over two time points across groups can be surprisingly complicated. A particularly vexing example is that of imbalanced baseline scores (i.e., when baseline scores are correlated with a covariate of interest), which can produce different conclusions across methods (see Littlefield, 2023[@zotero-34098], for a review). Given these shortcomings, and the complexity of the issues surrounding some of these methods, it is typically recommended that researchers make use of more modern approaches for analyzing longitudinal data (and preferably make use of data collected across 3 or more time points).
 
 #### Modern GLM Extensions
 
-Modern approaches to longitudinal data analysis have advanced beyond traditional methods by offering greater flexibility and a more in-depth understanding of within-person and between-person variability. `Generalized Estimating Equations (GEE)`, `Linear Mixed Models (LMM)`, `Generalized Linear Mixed Models (GLMM)`, and `Autoregressive Cross-Lagged Panel Models (ARCL)` are examples of such contemporary techniques. GEE is an extension of Generalized Linear Models. This model combines the generalized linear model for non-normal outcomes with repeated measures (marginal) model and is suitable for analyzing correlated longitudinal data and modeling population-averaged effects. LMMs, also known as multilevel or hierarchical linear models, facilitate the simultaneous analysis of within-person and between-person variability, making them ideal for nested data structures or repeated measures. GLMMs further extend the LMM framework to accommodate non-normal response variables, such as binary, count, or ordinal data. Finally, ARCL models are uses to investigate reciprocal relationships between variables over time, as they estimate both autoregressive and cross-lagged effects. 
+Modern approaches to longitudinal data analysis have advanced beyond traditional methods by offering greater flexibility and a more in-depth understanding of within-person and between-person variability. `Generalized Estimating Equations (GEE)`, `Linear Mixed Models (LMM)`, `Generalized Linear Mixed Models (GLMM)`, and `Autoregressive Cross-Lagged Panel Models (ARCL)` are examples of such contemporary techniques. GEE is an extension of Generalized Linear Models. This model combines the generalized linear model for non-normal outcomes with repeated measures (marginal) model and is suitable for analyzing correlated longitudinal data and modeling population-averaged effects. LMMs, also known as multilevel or hierarchical linear models, facilitate the simultaneous analysis of within-person and between-person variability, making them ideal for nested data structures or repeated measures. GLMMs further extend the LMM framework to accommodate non-normal response variables, such as binary, count, or ordinal data. Finally, ARCL models are used to investigate reciprocal relationships between variables over time, as they estimate both autoregressive and cross-lagged effects (although, ARCL models are relatively less useful for teasing apart between-person and within-person sources of variances; see @curran2021a). 
 
 The strengths of these modern methods lie in their ability to account for individual differences, within-person change, and time-varying predictors, thereby providing a more comprehensive understanding of complex relationships in longitudinal data. Despite these advantages, modern approaches may require more complex modeling assumptions and higher computational demands compared to traditional methods. Additionally, proper model specification and the interpretation of results can be more challenging, especially in cases of high multicollinearity or missing data. However, modern longitudinal analysis methods have generally surpassed traditional methods in addressing a wider range of research questions, accommodating diverse data structures, and elucidating the intricate dynamics of developmental processes.
 
