--- a/references.bib
+++ b/references.bib
@@ -922,8 +922,27 @@ Publisher: SAGE Publications Ltd},
   publisher={American Psychological Association}
 }
 
+@article{curran2021a,
+  title={The challenge of modeling co-developmental processes over time},
+  author={Curran, Patrick J and Hancock, Gregory R},
+  journal={Child development perspectives},
+  volume={15},
+  number={2},
+  pages={67--75},
+  year={2021},
+  publisher={Wiley Online Library}
+}
 
-
+@article{zotero-34098,
+  title={APA Handbook of Research Methods in Psychology, Second Edition},
+  author={xxxxx},
+  journal={xxxxx},
+  volume={xxxxx},
+  number={xx},
+  pages={xxxx},
+  year={2023},
+  publisher={xxxxx}
+}
 
 
 
